feat:go web demo
