# internal/types/ping.go
@@ -1,0 +1,5 @@
+package types
+
+type PingResp struct {
+	Field string `json:"field"`
+}
